стиль лого, ховеры в нав и бтн

--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -3,7 +3,9 @@
     position: absolute;
     bottom: 20px;
     right: 0;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 115px;
     height: 70px;
     border-radius: 3px 0 0 3px;
@@ -14,12 +16,12 @@
 }
 
 .btn__text {
-  display: block;
-  transform: translate(10px, 23px);
+  width: 90px;
   font-family: 'Georgia', serif;
   font-size: 0px;
-  color: #ffffff;
+  color: #red;
   letter-spacing: 1.5px;
+  text-align: center;
 }
 
 .btn--link:hover {
@@ -28,9 +30,8 @@
   transition-duration: 700ms;
 
   & .btn__text {
-    transform: translate(115px, 23px);
     font-size: 20px;
-    transition-delay: 700ms;
-    transition-duration: 700ms;
+    color: #ffffff;
+    transition-duration: 800ms;
   }
 }
