--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -4,17 +4,20 @@
     display: inline-block;
     margin-right: 310px;
     padding: 5px;
-    border: 1px dashed #c62828;
+    border: 1px dashed #fff;
     border-radius: 2px;
 
     font-family: 'Georgia', serif;
     font-size: 20px;
     letter-spacing: 0px;
-    color: #c62828;
+    color: #ffffff;
   }
 }
 
 .logo--header:hover {
+  border: 1px solid #ffffff;
   cursor: pointer;
+  text-shadow: 0 0 1px #ffffff;
+  transition-duration: 250ms;
 }
 
