--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,6 @@
 body {
   min-width: 1360px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Georgia', serif;
   font-size: 18px;
   line-height: 22px;
   background-color: #232323;
