правим стили, добавляем транзишн в навигацию, добавляем сили оверлея

--- a/less/blocks/container.less
+++ b/less/blocks/container.less
@@ -5,17 +5,28 @@
   padding: 0 100px;
 
   &--header {
+    position: relative;
     justify-content: flex-start;
     align-items: center;
-    padding: 20px 100px;
+    padding: 50px 100px;
+    padding-bottom: 50px;
   }
 
-  &--main {
+  &--main-index {
     width: 1100px;
     margin: 0 auto;
-    padding: 100px 100px;
-    padding-bottom: 70px;
+    padding: 80px 100px;
+    border-radius: 3px;
     background-color: #d2d1d1;
+  }
+
+  &--main-works {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 80px 100px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    color: #222222;
   }
 
   &--footer {
