--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -1,13 +1,14 @@
 .logo {
+  display: block;
+  text-decoration: none;
+  font-family: 'Georgia', serif;
+
 
   &--header{
-    display: inline-block;
     margin-right: 310px;
     padding: 5px;
     border: 1px dashed #fff;
     border-radius: 2px;
-
-    font-family: 'Georgia', serif;
     font-size: 20px;
     letter-spacing: 0px;
     color: #ffffff;
