--- a/less/global.less
+++ b/less/global.less
@@ -1,8 +1,13 @@
-body {
+.body {
   min-width: 1360px;
   font-family: 'Georgia', serif;
   font-size: 18px;
   line-height: 22px;
   background-color: #232323;
   color: #ffffff;
+
+  &--index {
+    background-color: #232323;
+    color: #ffffff;
+  }
 }
