--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,37 +1,34 @@
 .btn {
-  &--link {
-    position: absolute;
-    bottom: 20px;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 115px;
-    height: 70px;
-    border-radius: 3px 0 0 3px;
-    background-color: #c62828;
-    text-decoration: none;
-    color: #ffffff;
+  position: absolute;
+  right: 100px;
+  display: block;
+  width: 34px;
+  height: 34px;
+  padding: 0;
+  background-color: #232323;
+  border: none;
+  font-size: 0;
+
+  background-image: url("../img/icon-open1.svg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+
+
+  &--close {
+    background-image: url("../img/icon-close.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
+  }
+
+  &--overlay-close {
+    top: 50px;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-image: url("../img/icon-close.svg");
+    background-repeat: no-repeat;
+    background-position: 50%;
   }
 }
 
-.btn__text {
-  width: 90px;
-  font-family: 'Georgia', serif;
-  font-size: 0px;
-  color: #red;
-  letter-spacing: 1.5px;
-  text-align: center;
-}
-
-.btn--link:hover {
-  width: 300px;
-  border-radius: 5px;
-  transition-duration: 700ms;
-
-  & .btn__text {
-    font-size: 20px;
-    color: #ffffff;
-    transition-duration: 800ms;
-  }
+.btn:hover {
+  cursor: pointer;
 }
