--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,3 +1,20 @@
+.main-nav {
+  position: absolute;
+  right: 100px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+
+  &--show {
+    position: absolute;
+    top: 50px;
+    right: 230px;
+    width: 500px;
+    height: auto;
+    transition-duration: 10ms;
+  }
+}
+
 .main-nav__list {
   display: flex;
   flex-direction: row;
@@ -8,7 +25,7 @@
 
 .main-nav__item {
   margin: 0;
-  margin-right: 40px;
+  margin-right: 30px;
   padding: 0;
 }
 
@@ -22,11 +39,11 @@
   font-family: 'Georgia', serif;
   font-size: 22px;
   line-height: 24px;
-  color: #c62828;
+  color: #ffffff;
   text-decoration: none;
 }
 
 .main-nav__link:hover {
-  color: #ffffff;
-  transition-duration: 250ms;
+  color: #c62828;
+  transition-duration: 350ms;
 }
