--- a/less/style.less
+++ b/less/style.less
@@ -9,4 +9,7 @@
 @import "blocks/btn.less";
 @import "blocks/bg.less";
 @import "blocks/copyright.less";
+@import "blocks/works.less";
 @import "blocks/social.less";
+@import "blocks/overlay.less";
+@import "blocks/hidden.less";
