редактированы позиции кнопок, высота увеличенного изображения

--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -21,7 +21,8 @@
   }
 
   &--overlay-close {
-    top: 50px;
+    top: 30px;
+    right: 250px;
     background-color: rgba(0, 0, 0, 0.8);
     background-image: url("../img/icon-close.svg");
     background-repeat: no-repeat;
@@ -32,3 +33,4 @@
 .btn:hover {
   cursor: pointer;
 }
+
