--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,8 @@
   background-position: 50%;
 }
 .btn--overlay-close {
-  top: 50px;
+  top: 30px;
+  right: 250px;
   background-color: rgba(0, 0, 0, 0.8);
   background-image: url("../img/icon-close.svg");
   background-repeat: no-repeat;
@@ -313,6 +314,7 @@
 }
 .overlay__preview {
   display: inline-block;
+  height: 100%;
   margin: 30px 0;
   background: #ffffff;
 }
@@ -320,7 +322,7 @@
   display: block;
   width: 640px;
   height: 640px;
-  border: dotted 1px #dddddd;
+  border: 1px dotted #dddddd;
   cursor: pointer;
 }
 .hidden {
