--- a/less/blocks/overlay.less
+++ b/less/blocks/overlay.less
@@ -12,6 +12,7 @@
 
 .overlay__preview {
   display: inline-block;
+  height: 100%;
   margin: 30px 0;
   background: #ffffff;
 }
@@ -20,6 +21,6 @@
   display: block;
   width: 640px;
   height: 640px;
-  border: dotted 1px #dddddd;
+  border: 1px dotted #dddddd;
   cursor: pointer;
 }
