--- a/less/blocks/bg.less
+++ b/less/blocks/bg.less
@@ -1,6 +1,6 @@
 .bg {
   width: 620px;
-  background-image: url("/img/flower_crop_1920.jpg");
+  background-image: url("../img/flower_crop_1920.jpg");
   background-repeat: no-repeat;
   background-size: 85%;
   background-position: 0 35%;
