--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -3,6 +3,10 @@
   font-size: 18px;
   text-decoration: none;
   color: #ffffff;
+
+  &.reverse {
+    color: #232323;
+  }
 }
 .copyright:hover .copyright__heart{
   color: #c62828;
