--- a/less/global.less
+++ b/less/global.less
@@ -10,4 +10,10 @@
     background-color: #232323;
     color: #ffffff;
   }
+
+
 }
+body.reverse {
+    background-color: #ffffff;
+    color: #232323;
+  }
