--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -1,24 +1,31 @@
 .logo {
   display: block;
-  text-decoration: none;
+  margin-right: 310px;
+  padding: 5px;
+  border: 2px dashed #ffffff;
+  border-radius: 2px;
   font-family: 'Georgia', serif;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0px;
+  text-decoration: none;
+  color: #ffffff;
 
-
-  &--header{
-    margin-right: 310px;
-    padding: 5px;
-    border: 1px dashed #fff;
-    border-radius: 2px;
-    font-size: 20px;
-    letter-spacing: 0px;
-    color: #ffffff;
+  &.reverse {
+    border: 2px dashed #c62828;
+    color: #c62828;
   }
 }
 
-.logo--header:hover {
-  border: 1px solid #ffffff;
+.logo:hover {
+  border: 2px solid #ffffff;
   cursor: pointer;
   text-shadow: 0 0 1px #ffffff;
-  transition-duration: 250ms;
+}
+
+.logo.reverse:hover {
+  border: 2px solid #232323;
+  color: #232323;
+  cursor: pointer;
 }
 
