--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -13,6 +13,9 @@
     height: auto;
     transition-duration: 10ms;
   }
+  &--show.reverse {
+    background-color: #c62828;
+  }
 }
 
 .main-nav__list {
@@ -45,5 +48,10 @@
 
 .main-nav__link:hover {
   color: #c62828;
+  transition-duration: 350ms;
+}
+
+.main-nav--show.reverse .main-nav__link:hover {
+  color: #232323;
   transition-duration: 350ms;
 }
