--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,5 @@
 @import "global.less";
-
+@import "normalize.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/main-nav.less";
