убирает соц-иконки из разметки и ставит их фоном

--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -11,20 +11,36 @@
   border-radius: 2px;
   background-color: #d1d1d1;
   font-size: 0;
+
+  background-image: url("../img/icon-vk.svg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+
+  &--inst {
+    background-image: url("../img/icon-insta.svg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  }
+
+  &--fb {
+    background-image: url("../img/icon-fb.svg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  }
 }
 .social__vk-icon {
-  fill: #222222;
-  transform: translate(7px, 8px);
+  // fill: #222222;
+  // transform: translate(7px, 8px);
 }
 
 .social__inst-icon {
-  fill: #222222;
-  transform: translate(17px, 17px);
+  // fill: #222222;
+  // transform: translate(17px, 17px);
 }
 
 .social__fb-icon {
-  fill: #222222;
-  transform: translate(-16px, 14px);
+  // fill: #222222;
+  // transform: translate(-16px, 14px);
 }
 
 .social__item:hover {
